# indexqube

./: .gitignore  .railwayignore  Dockerfile  README.md  index.html  main.py  nixpacks.toml  outputs.txt  pyproject.toml  railway.toml  requirements.txt  sitemap.xml  styles.css
airflow/: requirements.txt
airflow/dags/: daily_index_calculation.py  daily_ingestion.py
api/: main.py  requirements.txt
frontend/: .env.production  next.config.ts  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/: index.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts
scripts/: backtest_engine.py  create_schema.sql  fetch_corporate_actions.py  fetch_spy.py  fetch_test_data.py  fix_missing_tickers.py  full_backfill.py  iceberg_time_travel.py  load_sp500_tickers.py  setup_iceberg.py  test_massive_free.py  update_mock_bloomberg.py  validation_framework.py
terraform/: main.tf  output.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
