[project]
name = "indexqube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.46",
    "fastapi>=0.129.0",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "pendulum>=3.2.0",
    "polygon-api-client>=1.16.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
